@@ -84,6 +84,7 @@ enum GPE_codes {
   GPE_ILLEGAL_NESTING  = 143,
   GPE_UNMATCHED_ENDM   = 145,
   GPE_OBJECT_ONLY      = 149,
+  GPE_LABEL_IN_SECTION = 150,
   GPE_UNRESOLVABLE     = 151,
   GPE_WRONG_SECTION    = 152,
   GPE_CONTIG_SECTION   = 154,
